--- a/ycombinator valuation.ipynb
+++ b/ycombinator valuation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMA/KIG8+KbHHgESlMNb5k5",
+      "authorship_tag": "ABX9TyPOyyBFftPl8/aU+m3zidV1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "id": "fFKjwsPj9Obd",
         "outputId": "afe1cbbc-9e34-42c5-e2ef-03a502392138"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -550,7 +550,7 @@
         "id": "wTll3RZXPPg9",
         "outputId": "10047cc2-3671-4204-e536-c9b48c6f70f8"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,9 +863,7 @@
         "               '94': df.loc[co_per_percentile * 6 - 1, 'implied value per year'],\n",
         "               '92': df.loc[co_per_percentile * 8 +2, 'implied value per year'],\n",
         "               }\n",
-        "percentiles\n",
-        "# co_per_percentile * 8 +2\n",
-        "# pd.to_numeric(df.loc[3, 'implied value per year'].replace('[^-.0-9]', ''))"
+        "percentiles"
       ],
       "metadata": {
         "colab": {
@@ -874,7 +872,7 @@
         "id": "xP3g8U4Y9qn8",
         "outputId": "272164a1-0af6-4872-8fc4-1d14a6ff0f22"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,12 +908,12 @@
       "metadata": {
         "id": "oNRMtSpLS2iv"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1020,7 +1018,7 @@
         "id": "zP6mq1ila5ni",
         "outputId": "b4154932-7eb0-4c71-ecfe-adf2e9a4893b"
       },
-      "execution_count": 318,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1085,7 @@
         "id": "NBpkTfUOwKLE",
         "outputId": "5244c455-1889-4f15-f028-acedc8a49d68"
       },
-      "execution_count": 298,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1166,7 +1164,7 @@
         "id": "-_KG-uZ5nk0f",
         "outputId": "be9fb548-294b-41c8-9187-695b5eda98a4"
       },
-      "execution_count": 244,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1309,7 +1307,7 @@
         "id": "O64Rbttfux3D",
         "outputId": "64cba39b-b56a-4dda-e00e-1a1cc451fe40"
       },
-      "execution_count": 319,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1355,7 +1353,7 @@
         "id": "CocUn3F_wXm9",
         "outputId": "4e0d71bc-bbb4-4947-9186-4d346b314cfa"
       },
-      "execution_count": 320,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1422,7 +1420,7 @@
         "id": "874Ue7cOyf2W",
         "outputId": "42fd8101-32b9-46a6-a1b9-6face9ba8cf8"
       },
-      "execution_count": 322,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1447,7 +1445,7 @@
       "metadata": {
         "id": "1HRz64Lizlo1"
       },
-      "execution_count": 351,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1461,7 +1459,7 @@
       "metadata": {
         "id": "ePuxazrl0tqo"
       },
-      "execution_count": 348,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1490,7 +1488,7 @@
         "id": "KjlZSEd31OI-",
         "outputId": "f5637198-f394-48e5-cee7-eaef079f8342"
       },
-      "execution_count": 352,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1652,7 +1650,7 @@
         "id": "3RNiRq9c3eX_",
         "outputId": "8b02bc87-7581-45b8-8101-e92aa8b10cb5"
       },
-      "execution_count": 347,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
